--- a/index.css
+++ b/index.css
@@ -1,48 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Simonetta:wght@400;700&family=Tiro+Bangla&family=Send+Flowers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:500');
 
 * {
-    font-family: 'Outfit', sans-serif; /* Achte auf den richtigen Font */
-    background-color: #FFB0B0;
+  font-family: 'Outfit', sans-serif; /* Achte auf den richtigen Font */
+  background-color: #FFB0B0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navbar {
+  display: flex;
+  justify-content: flex-end; /* Abstand zwischen Logo und Navigationselementen */
+  align-items: center;
+  padding: 20px 15%;
+  border: 1px solid;
+}
+
+.nav-logo {
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-right: auto; /* Logo nach links verschieben */
+  color: #810B0B;
 }
 
 .nav-list {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 0;
-    padding: 0.8rem 10%;
+  list-style: none;
+  display: flex;
+  gap: 4em; /* Abstand zwischen den Listenelementen */
+  font-size: 1.1em;
 }
 
-.nav-item {
-    list-style: none;
-    margin-right: 4.5rem;
+.nav-list a {
+  text-decoration: none;
+  color: #000; /* Standardfarbe der Links */
+  transition: color 0.5s
 }
 
-.nav-item a {
-    text-decoration: none;
-    color: black;
-    transition: color 0.2s, font-size 0.2s; 
-}
+.nav-list a:hover {
+  color: #810B0B; /* Hover-Effekt */
 
-.nav-item a:hover {
-    color: #810B0B;
-    font-size: 1.2rem;
-}
-
-.nav-item:first-child{
-    margin-right:auto;
-    margin-left: 2rem;
-    font-size: 2rem;
-    font-weight: bold;
-   
-}
-
-.nav-item:first-child a {
-    color: #810B0B;
-    transition: color 0s; font-size: 0s;
-}
-
-.nav-item:first-child a:hover {
-    font-size: 2rem;
-    color: white; 
 }
