--- a/index.css
+++ b/index.css
@@ -3,42 +3,158 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:500');
 
 * {
-  font-family: 'Outfit', sans-serif; /* Achte auf den richtigen Font */
+  font-family: 'Outfit', sans-serif;
   background-color: #FFB0B0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-weight: 400;
 }
 
 .navbar {
   display: flex;
-  justify-content: flex-end; /* Abstand zwischen Logo und Navigationselementen */
+  justify-content: flex-end;
   align-items: center;
-  padding: 20px 15%;
-  border: 1px solid;
+  padding: 1.5em 12%;
+  box-shadow: 0 0.2px 10px #000000;
 }
 
 .nav-logo {
   font-weight: bold;
-  font-size: 1.5em;
-  margin-right: auto; /* Logo nach links verschieben */
+  font-size: 1.5rem;
+  margin-right: auto;
   color: #810B0B;
 }
 
 .nav-list {
   list-style: none;
   display: flex;
-  gap: 4em; /* Abstand zwischen den Listenelementen */
-  font-size: 1.1em;
+  gap: 4rem;
+  font-size: 1.1rem;
 }
 
 .nav-list a {
   text-decoration: none;
-  color: #000; /* Standardfarbe der Links */
-  transition: color 0.5s
+  color: #000;
+  transition: color 0.5s;
 }
 
 .nav-list a:hover {
-  color: #810B0B; /* Hover-Effekt */
+  color: #810B0B;
+}
 
+@media (max-width: 768px) {
+  .nav-list {
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-basis: calc(50% - 20px);
+  }
+
+  .nav-list a {
+    padding: 10px 0;
+  }
+}
+
+
+/*------------------------------------------------------------------------------------------------------------------------------*/
+
+.main-container {
+  display: flex;
+  flex-direction: row; /* Stellt sicher, dass die Containers untereinander sind */
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+  padding: 5em 10% 5em 10%;
+  gap: 10em;
+}
+
+.left-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1.1em;
+  margin-bottom: 5em; /*brauch ich das*/
+}
+
+.left-top-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.top-row {
+  display: flex;
+  justify-content: center;
+  gap: 0.8em;
+}
+
+/* Schriftarten und Stil für Textklassen */
+.wohnen, .schenken, .lifestyle {
+  font-size: clamp(4rem, 4vw, 5rem);
+}
+
+.wohnen {
+  font-family: 'Simonetta', serif;
+}
+
+.schenken {
+  font-family: 'Tiro Bangla', serif;
+  color: #810B0B;
+  padding-left: 0.2em;
+}
+
+.lifestyle {
+  font-family: 'Send Flowers', cursive;
+  padding-left: 1.5em;
+}
+
+.subtext-container {
+  display: flex;
+  margin-top: 10%
+}
+.subtext p{
+  font-family: 'Simonetta', serif;
+  font-size: clamp(2rem, 2vw, 2.5rem);
+}
+
+/* Right Container */
+.right-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 60%;
+  min-width: 50%;
+  min-height: 70%;
+  position: relative;
+}
+
+.right-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Slideshow */
+.slideshow {
+  position: relative;
+  width: 100%;
+  height: 40em;
+  overflow: hidden;
+}
+
+.slideshow .slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slideshow .slide.active {
+  opacity: 1;
 }
