--- a/index.css
+++ b/index.css
@@ -4,19 +4,29 @@
 
 * {
   font-family: 'Outfit', sans-serif;
-  background-color: #FFB0B0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-weight: 400;
 }
 
+body {
+  background-color: #FFB0B0;
+  padding-top: 2rem;
+}
+
 .navbar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 1.5em 12%;
+  padding: 1.7em 12%;
   box-shadow: 0 0.2px 10px #000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #FFB0B0;
+  z-index: 2;
 }
 
 .nav-logo {
@@ -157,4 +167,45 @@
 
 .slideshow .slide.active {
   opacity: 1;
+}
+
+/*------------------------------------------------------------------------------------------------------------------------------*/
+
+.about-page {
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  padding: 4em 3em 4em 3em;
+  gap: 4em;
+  flex-wrap: nowrap;
+  justify-content: center;
+
+}
+
+.about-child-1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 4em;
+}
+
+.about-text {
+  width: 24em;
+  font-family: 'Tiro Bangla', serif;
+  font-size: clamp(1rem, 1.3rem, 2.5rem);
+  line-height: 1.5;
+  text-align: justify;
+  font-weight: lighter;
+}
+
+.about-child-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 4em;
+}
+
+.about-picture {
+  width: 50%; /* Passt die Breite des Bildes an den Container an */
+  height: auto; /* Beibehaltung des Seitenverhältnisses */
 }
