--- a/index.css
+++ b/index.css
@@ -211,6 +211,81 @@ body {
   height: auto; /* Beibehaltung des Seitenverhältnisses */
 }
 
+.visit-us {
+  display: flex;
+  background-color: white;
+  padding: 4em 3em;
+  gap: 4em;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin-top: 2em;
+  margin-bottom: 0; /* Entfernt den unteren Rand */
+}
+
+.visit-us-left {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding: 2em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 10px; /* Abgerundete Ecken */
+}
+
+.visit-us-title {
+  font-weight: bold;
+  font-size: clamp(2rem, 2.5vw, 3rem);
+  margin-bottom: 1.5em;
+}
+
+.company-info,
+.contact-info,
+.address-info {
+  margin-bottom: 2em;
+}
+
+.company-info h3,
+.contact-info h3,
+.address-info h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.company-info p,
+.contact-info p,
+.address-info p {
+  font-size: clamp(1rem, 1.2vw, 1.5rem);
+  line-height: 1.5;
+}
+
+.company-info p {
+  display: flex;
+  justify-content: space-between;
+  font-size: clamp(1rem, 1.2vw, 1.5rem);
+  line-height: 1.5;
+}
+
+.company-info p span {
+  display: inline-block;
+}
+
+.divider {
+  border: 1px solid #d3d3d3;
+  margin: 1.5em 0;
+}
+
+.visit-us-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+}
+
+.navigation-image {
+  max-width: 100%;
+  height: auto;
+}
+
   /* Footer */
   .footer {
     background-color: #810B0B; /* Dunkelrot */
@@ -218,7 +293,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 1.7em 12%;
-    margin-top: 2em;
+    margin-top: 0;
     font-size: 1rem;
     font-family: 'Outfit', sans-serif;
   }
